# Nous voulons un cmake "récent" pour utiliser les dernières fonctionnalités
cmake_minimum_required(VERSION 3.0)

# Notre projet est étiqueté hello
project(AsteroideDefense)

# On inclut notre bibliothèque dans le processus de CMake
add_subdirectory(src)
add_subdirectory(include)

# Crée des variables avec les fichiers à compiler
set(SRCS
    main.cpp
    )
    
# Notre exécutable
add_executable(main ${SRCS})
target_compile_features(AsteroideDefense PUBLIC cxx_nullptr)

# Et pour que l'exécutable fonctionne, il faut lui indiquer la bibliothèque dont il dépend
target_link_libraries(main AsteroideDefense)